--- a/package.xml
+++ b/package.xml
@@ -12,7 +12,9 @@
 
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>message_runtime</build_depend>
 
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <build_depend>message_runtime</build_depend>
 </package>
